--- a/communities/templates/communities/community_detail.html
+++ b/communities/templates/communities/community_detail.html
@@ -52,7 +52,7 @@
 <div class="col-md-8" style='margin-top: 15px'>
   {% if community.posts.count == 0 %}
     <hr>
-    <h2>Nothing posted in this community yet!</h2>
+    <h2>No topics within this community yet!</h2>
   {% else %}
 
     {% for post in community.posts.all  %}
