--- a/static/innerspace/css/master.css
+++ b/static/innerspace/css/master.css
@@ -5,8 +5,6 @@ body {
 
 :root {
   --jumbo-text-1-color: #89a6c6;
-  --btn-good-color: rgb(91,192,222);
-  --btn-bad-color: #ccc;
 }
 
 .mynav {
@@ -80,66 +78,7 @@ body {
   color: var(--jumbo-text-1-color)
 }
 
-.btn-good {
-  margin-top: 35px;
-  height: 120px;
-  width: 288px;
 
-  border: solid 1px;
-  background-color: rgba(var(--btn-good-color),0.6);
-  border-radius: 15px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  font-size: 3em;
-  font-weight: bold;
-  color: black;
-
-  box-shadow:0 4px 20px #ccc;
-  border-radius:10px;
-  border-color: var(--btn-good-color);
-
-}
-.btn-good:hover{
-  margin-left: 1px;
-  box-shadow: 0 3px 30px var(--btn-good-color);
-  -webkit-transition:all .1s cubic-bezier(.93, .71, .58, 1);
-}
-.btn-good a { color: var(--btn-good-color); }
-.btn-good a:hover{ text-decoration: none; }
-
-/**/
-
-#btn-new-community {
-  /*word-wrap: normal;*/
-  height: 50px;
-  width: 210px;
-  font-size: 1.2em;
-}
-#btn-join {
-  /*word-wrap: normal;*/
-  height: 50px;
-  width:90px;
-  font-size: 1.2em;
-  float: left;
-}
-#btn-leave {
-  /*word-wrap: normal;*/
-  height: 50px;
-  width:100px;
-  font-size: 1.2em;
-  float: left;
-}
-#btn-new-post{
-  /*word-wrap: normal;*/
-  height: 50px;
-  width:125px;
-  font-size: 1.2em;
-  float: left;
-  margin-left: 10px;
-}
 
 .shadebox {
   padding: 1px;
@@ -157,7 +96,15 @@ body {
 
 /**/
 
-.post-media {
+.community-item {
+  padding-bottom: 8px;
+  padding-left: 5px;
+  margin-bottom: 15px;
+}
+
+/**/
+
+.post-item {
   padding-bottom: 8px;
   padding-left: 5px;
   margin-bottom: 15px;
