--- a/communities/templates/communities/community_detail.html
+++ b/communities/templates/communities/community_detail.html
@@ -6,26 +6,32 @@
 
 
 <h1>{{community.name}}</h1>
+<h4>Members: {{community.members.count}}</h4>
 <div class="jumbotron jumbotron-home" id='community-info'>
   {{community.description_html|safe}}
 </div>
-<h4>Members: {{community.members.count}}</h4>
+
+
+<hr>
 
   {% if user in community.members.all %}
-    <div class="btn-good" id='btn-leave'>
+  <div class="row">
+    <div class="btn-sky" id='btn-leave'>
       <a href="{% url 'communities:leave' slug=community.slug %}">
         Leave
       </a>
     </div>
-    <div class="btn-good" id='btn-new-post'>
+    <div class="btn-sky" id='btn-new-post'>
       <a href="{% url 'posts:create' %}">
         New Post
       </a>
     </div>
+  </div>
+
   {% else %}
 
     {% if user.is_authenticated %}
-    <div class="btn-good" id='btn-join'>
+    <div class="btn-sky" id='btn-join'>
       <a href="{% url 'communities:join' slug=community.slug %}">
         Join
       </a>
@@ -42,7 +48,7 @@
 </div>
 {% endblock %}
 
-<hr>
+
 
 {% block community_content %}
 
@@ -51,8 +57,13 @@
 
 <div class="col-md-8" style='margin-top: 15px'>
   {% if community.posts.count == 0 %}
-    <hr>
+  <div class="">
+
+  </div>
+  <div class="">
     <h2>No topics within this community yet!</h2>
+  </div>
+
   {% else %}
 
     {% for post in community.posts.all  %}
