--- a/static/innerspace/css/btn.css
+++ b/static/innerspace/css/btn.css
@@ -32,31 +32,56 @@
 .btn-good a { color: var(--btn-good-color); }
 .btn-good a:hover{ text-decoration: none; }
 
+
+
+.btn-sky * {
+  background-color: rgba(var(--btn-good-color),0.6);
+
+  display: inline;
+  align-items: center;
+  justify-content: center;
+
+  border: solid 1px;
+  border-radius:5px;
+  border-color: var(--btn-good-color);
+
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+
+  font-size: 1.2em;
+  font-weight: bold;
+  color: var(--btn-good-color);
+
+  box-shadow:-1px 1px 1px #ccc;
+  -webkit-transition:all .14s cubic-bezier(.93, .71, .58, 1);
+}
+.btn-sky *:hover{
+  -webkit-transition:all .14s cubic-bezier(.93, .71, .58, 1);
+  box-shadow: -1px 1px 2px var(--btn-good-color);
+  text-decoration: none;
+  color: #23527c;
+}
+
+#btn-joinus {
+  margin-top: 35px;
+  font-size: 3em;
+}
+#btn-password-reset {
+  display: block;
+  margin-top: 20px;
+}
 #btn-new-community {
-  /*word-wrap: normal;*/
-  height: 50px;
-  width: 210px;
-  font-size: 1.2em;
+  margin-bottom: 20px;
 }
-#btn-join {
-  /*word-wrap: normal;*/
-  height: 50px;
-  width:90px;
-  font-size: 1.2em;
-  float: left;
-}
+
 #btn-leave {
-  /*word-wrap: normal;*/
-  height: 50px;
-  width:100px;
-  font-size: 1.2em;
   float: left;
+  margin-bottom: 20px;
 }
 #btn-new-post{
-  /*word-wrap: normal;*/
-  height: 50px;
-  width:125px;
-  font-size: 1.2em;
   float: left;
   margin-left: 10px;
+  margin-bottom: 20px;
 }
