--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -8,7 +8,7 @@
     {% csrf_token %}
     {% bootstrap_form form %}
     <input type="submit" class="btn btn-default" value="Log In">
-
+    <a href="{% url 'accounts:password_reset' %}">Forgot Password?</a>
   </form>
 
 </div>
