--- a/communities/templates/communities/community_list.html
+++ b/communities/templates/communities/community_list.html
@@ -2,7 +2,7 @@
 
 {% block community_prefix %}
 <div class="row">
-<div class="col-md-4">
+<div class="col-sm-4">
   <div class="content">
 
     {% if user.is_authenticated %}
@@ -18,7 +18,7 @@
   </div>
 
   {% if user.is_authenticated %}
-    <div class="btn-good" id='btn-new-community'>
+    <div class="btn-sky" id='btn-new-community'>
       <a href="{% url 'communities:create' %}">
         New Community
       </a>
@@ -36,7 +36,7 @@
 
 
 {% block community_content %}
-<div class="col-md-8">
+<div class="col-sm-8">
 
     {% for community in community_list  %}
       <div class="shadebox community-item">
