--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,16 @@
   {% if not user.is_authenticated %}
 
   {% endif %}
-  <div class="jumbotron jumbotron-home">
+  <div class="jumbotron jumbotron-sky">
     <div class='jumbo-text-1'>
       "Outer space may be everything, but<br>
       Inner Space is much more..."
     </div>
 
-    <div class="jumbo-text-2">BE ANONYMOUS  -  SAY ANYTHING  -  DO WHATEVER...</div>
+    <div class='row jumbo-text-2' >BE ANONYMOUS  -  SAY ANYTHING  -  DO WHATEVER...</div>
 
     {% if not user.is_authenticated %}
-    <div class="btn-good">
+    <div class='btn-sky' id='btn-joinus'>
       <a href="{% url 'accounts:signup' %}">
         JOIN US
       </a>
