Implement user dashboard

--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
 {% block prefix %}
+<div class="col-sm-4">
+  <h1>@{{user.username}}</h1>
+  <hr>
+</div>
+<div class="col-sm-8">
+  {% for post in user_posts  %}
+    {% include "posts/_post.html" %}
+  {% endfor %}
+</div>
 
 {% endblock %}
