--- a/static/innerspace/css/btn.css
+++ b/static/innerspace/css/btn.css
@@ -76,12 +76,11 @@
   margin-bottom: 20px;
 }
 
-#btn-leave {
+/*#btn-leave {
   float: left;
   margin-bottom: 20px;
-}
-#btn-new-post{
+}*/
+/*#btn-new-post{
   float: left;
-  margin-left: 10px;
   margin-bottom: 20px;
-}
+}*/
