--- a/communities/templates/communities/community_list.html
+++ b/communities/templates/communities/community_list.html
@@ -52,10 +52,10 @@
 
           <div class="row">
 
-            <div class="col-md-4">
-              <span class="badge">{{community.members.count}}</span>
-              member{{community.members.count|pluralize}}
-            </div>
+            {# <div class="col-md-4">#}
+              {# <span class="badge">{{community.members.count}}</span>#}
+              {# member{{community.members.count|pluralize}}#}
+            {# </div>#}
 
             <div class="col-md-4">
               <a href="{% url 'communities:single' slug=community.slug %}">
