--- a/posts/templates/posts/post_form.html
+++ b/posts/templates/posts/post_form.html
@@ -2,10 +2,16 @@
 {% load bootstrap3 %}
 
 {% block post_content %}
+
 <h4>Create a new post:</h4>
+
 <form id='post-form' action="{% url 'posts:create' %}" method="post">
   {% csrf_token %}
-  {% bootstrap_form form %}
+
+  {% for field in form %}
+    {% bootstrap_field field %}
+  {% endfor %}
+
   <span class='btn-sky'><input type="submit" value="Post"></span>
 
 </form>
