--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Welcome to Inner Space!</h1>
+  {# <h1>Welcome to Inner Space!</h1>#}
   {% if not user.is_authenticated %}
 
   {% endif %}
@@ -10,7 +10,7 @@
       Inner Space is much more..."
     </div>
 
-    <div class='row jumbo-text-2' >BE ANONYMOUS  -  SAY ANYTHING  -  DO WHATEVER...</div>
+    <div class='row jumbo-text-2' >SAY ANYTHING  -  RANK UP - DO WHATEVER...</div>
 
     {% if not user.is_authenticated %}
     <div class='btn-sky' id='btn-joinus'>
