--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse navbar-right" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
               <li class='nav-item nav-link mynav-item'><a href="{% url 'home' %}">Home</a></li>
               <li class='nav-item nav-link mynav-item'><a href="{% url 'about' %}">About</a></li>
