--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,10 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    <!--Font Awesome CSS -->
 
+    <!--Font Awesome CSS -->
     <link rel="stylesheet" href="{% static 'font-awesome-4.7.0/css/font-awesome.css' %}">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'innerspace/css/master.css' %}">
     <link rel="stylesheet" href="{% static 'innerspace/css/btn.css' %}">
@@ -32,8 +33,9 @@
 
         <a class='navbar-brand mynav-item mynav-item-brand' href="{% url 'home' %}" id='the-nav'> >> INNER SPACE << </a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler mynav-item" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon dropdown-toggle"></span>
+          <span>Menu</span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -46,7 +48,7 @@
                   Account
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{% url 'accounts:dashboard' slug=user.slug %}">Dashboard</a>
+                  <a class="dropdown-item" href="{% url 'accounts:user_profile' username=user.slug %}">Dashboard</a>
                   <a class="dropdown-item" href="#">Settings</a>
                   <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
                 </div>
@@ -58,7 +60,7 @@
 
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search Website" aria-label="Search" style='width: auto'>
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
               <i class="fa fa-search fa-3" aria-hidden="true"></i>
             </button>
