--- a/posts/templates/posts/_post.html
+++ b/posts/templates/posts/_post.html
@@ -2,7 +2,7 @@
 
     <div class="post-header">
       <div class="post-user">
-        <a href="{% url 'posts:for_user' username=post.user.username %}">
+        <a href="{% url 'accounts:user_profile' username=post.user.slug %}">
           @{{post.user.username}}
         </a>
       </div>
@@ -12,23 +12,24 @@
       {{post.message_html|safe}}
     </div>
 
-    <hr style='padding:0; margin:0; margin-top:3px'>
+    <hr style='padding:0; margin:0; margin-top:1px'>
 
     <div class="post-footer">
 
-      {% if post.community %}
-			   <span class="post-community">in <a href="{% url 'communities:single' slug=post.community.slug %}">{{ post.community.name }}</a></span>
-         <span class='post-community'> on </span>
-      {% endif %}
       <time class="post-time">
-        <a href="{% url 'posts:single' username=post.user.username pk=post.pk %}">
+        <a href="{% url 'posts:single' pk=post.pk %}">
           ({{post.create_date}})
         </a>
       </time>
 
+      <span class="badge">{{post.comments.count}}</span>
+      <a href="{% url 'posts:single' pk=post.pk %}">comment{{post.comments.count|pluralize}}</a>
+
+      <span class="text-success" style='font-size: 1.2em'>+</span>
+      <span class="text-danger" style='font-size: 1.2em'>-</span>
+
       {% if user.is_authenticated and post.user == user %}
-        <a href="{% url 'posts:delete' pk=post.pk %}" title="delete" class="btn btn-simple">
-          <span class="glyphicon glyphicon-remove text-danger" aria-hidden='true'></span>
+        <a href="{% url 'posts:delete' pk=post.pk %}" title="deletes" class="btn btn-simple">
           <span class="text-danger icon-label">Delete</span>
         </a>
       {% endif %}
