--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -1,8 +1,34 @@
-{% extends "posts/post_base.html" %}
+{% extends "base.html" %}
 
 
-{% block post_content %}
-<div class="col-md-8">
-  {% include "posts/_post.html" %}
-</div>
+{% block content %}
+
+  <div class="row">
+
+    <div class="col-md-5">
+      {% include "posts/_post.html" %}
+
+      <div class="btn-sky" style='margin-top:20px; margin-bottom:20px;'>
+        <a href="{% url 'comments:create' pk=post.pk %}">Reply</a>
+      </div>
+
+      <hr style="margin-top: 10px">
+    </div>
+
+    <div class="col-md-7">
+
+      {% for comment in post.comments.all %}
+        {% include "comments/_comment.html" %}
+      {% empty %}
+        <h2>No comments yet (be the first)!</h2>
+      {% endfor %}
+
+    </div>
+
+  </div>
+
+
+
+  </div>
+
 {% endblock %}
