--- a/static/innerspace/css/master.css
+++ b/static/innerspace/css/master.css
@@ -138,6 +138,46 @@ body {
   font-size: 0.65em;
 }
 
+/**/
+
+.comment-item {
+  background-color: rgba(91,192,222,0.1);
+  margin-top: 10px;
+  padding-left: 5px;
+
+  box-shadow:0 4px 10px #ccc;
+  border-radius:10px;
+
+  -webkit-transition:all .2s cubic-bezier(.93, .71, .58, 1);
+
+}
+.comment-item:hover {
+  box-shadow:0 3px 20px #5bc0de;
+  -webkit-transition:all .2s cubic-bezier(.93, .71, .58, 1);
+}
+
+.comment-header {
+
+}
+.comment-user {
+  margin: 0;
+  margin-bottom: 3px;
+  padding: 0;
+  font-size: 0.8em;
+}
+.comment-content {
+  margin: 0;
+  padding: 0;
+  font-size: 0.8em;
+  color: var(--jumbo-text-2-color);
+}
+.comment-footer {
+  justify-content: left;
+}
+.comment-time {
+  font-size: 0.65em;
+}
+
 
 .mycontent {
 
