--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,14 @@
 
     <div class="col-md-4">
 
+        <form class="form-inline my-2 my-xs-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style='width:auto'>
+          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
+            <i class="fa fa-search fa-3" aria-hidden="true"></i>
+          </button>
+        </form>
+
+
       {% if user.is_authenticated %}
         <div class="btn-sky">
           <a href="{% url 'posts:create' %}">
