--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'innerspace/css/master.css' %}">
     <link rel="stylesheet" href="{% static 'innerspace/css/btn.css' %}">
+    <link rel="stylesheet" href="{% static 'innerspace/css/text.css' %}">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
