--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
           <ul class="navbar-nav mr-auto">
               <li class='nav-item nav-link mynav-item'><a href="{% url 'home' %}">Home</a></li>
               <li class='nav-item nav-link mynav-item'><a href="{% url 'about' %}">About</a></li>
+              <li class='nav-item nav-link mynav-item'><a href="{% url 'tweets:index' %}">Tweets</a></li>
             {% if user.is_authenticated %}
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle mynav-item" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
