--- a/accounts/templates/accounts/user_profile.html
+++ b/accounts/templates/accounts/user_profile.html
@@ -21,9 +21,12 @@
   </div>
 
   <div class="col-sm-8">
-    {% for post in user_posts  %}
+    {% include "posts/_prev_next.html" %}
+
+    {% for post in posts  %}
       {% include "posts/_post.html" %}
     {% endfor %}
+
   </div>
 </div>
 
